assets/main.scss
$tools-default-color: rgba(250, 9, 207, 0.42);
$tools-highlight-color: #fa09cf;
$standard-padding: 10px;
$message-area-bg-color: rgba(255, 255, 255, 0.8);
$sender-message-color: rgb(255, 248, 220);
$own-message-color: rgb(255, 192, 203);
$br: 10px;

body {
    margin: 0;
}

#root {
    font-family: 'Source Sans Pro', sans-serif;
    overflow: hidden;
    width: 100vw;
    height: 100vh;
    background: url('./images/background.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.app-area {
    max-width: 900px;
    padding: 10px 0;
    height: 100%;
    width: 90%;
    margin: auto;
    display: grid;
    grid-template-columns: 2fr 20px 5fr 5fr 2fr;
    grid-template-rows: 2fr 10fr 10fr 1fr;
    grid-template-areas:
        '...... .  ....   ....   session'
        'online .  chat   chat   ......'
        'online .  chat   chat   ......'
        '...... .  ....   ....   ......';
}

.online-component {
    grid-area: online;
    ul {
        padding: 0;
        margin: 0;
        list-style: none;

        li {
            background-color: $message-area-bg-color;
            border-radius: $br;
            padding-left: 1em;
            text-indent: -0.7em;
            display: inline-block;
            padding-right: 10px;
        }
        li::before {
            content: '• ';
            color: green;
            font-size: 20px;
            line-height: 0;
        }
    }
}

.session-bar-component {
    position: absolute;
    top: 10px;
    right: 30px;
    grid-area: session;
    text-align: right;
    display: flex;
    flex-direction: row;
    .display-name {
        display: inline;
        margin: 0;
        font-size: 23px;
        color: $tools-default-color;
    }

    .logout > svg {
        font-size: 30px;
        color: $tools-default-color;
    }

    .logout > svg:hover {
        color: $tools-highlight-color;
    }
}

.chat-area {
    border-radius: $br;
    box-shadow: 3px 3px 5px #777;
    grid-area: chat;
    display: flex;
    flex-direction: column;
}

.conversation-component,
.msg-input-component {
    background-color: $message-area-bg-color;
}

.conversation-component {
    border-radius: $br $br 0 0;
    width: 100%;
    display: flex;
    flex: 5;
    flex-direction: column;
    align-items: start;
    overflow: auto;

    .message {
        border: 1px solid #aaa;
        width: 50%;
        padding: $standard-padding;
        margin: 10px 10px;
    }
}

.msg-input-component {
    border-radius: 0 0 $br $br;
    flex: 1 1;
    padding: 0;

    textarea {
        font-size: 16px;
        font-family: 'Source Sans Pro', sans-serif;
        padding: 15px;
        background-color: rgba(100, 100, 100, 0.1);
        resize: none;
        margin: auto;
        vertical-align: text-top;
        height: calc(100% - 30px);
        width: calc(100% - 30px);
        border: none;
    }
    textarea:focus {
        outline: none;
    }
}

.sender-msg {
    align-self: flex-start;
    border-radius: 0 $br $br $br;
    background-color: $sender-message-color;
}

.own-msg {
    align-self: flex-end;
    border-radius: $br 0 $br $br;
    background-color: $own-message-color;
}

